cabal-version: 3.0

name: curly
version: 0.1

synopsis: High level HTTP client based on libcurl
homepage: https://github.com/nikita-volkov/curly
bug-reports: https://github.com/nikita-volkov/curly/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022 Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/curly.git

common base-settings
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010

library
  import: base-settings
  hs-source-dirs: library
  exposed-modules:
    Curly
  other-modules:
    Curly.CurlhsExtras
    Curly.Prelude
  build-depends:
    attoparsec >=0.14 && <0.15,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.12,
    case-insensitive >=1.2 && <2,
    cereal >=0.5.8.2 && <0.6,
    curlhs >=0.1.6 && <0.2,
    text >=1 && <2,
    transformers >=0.5 && <0.6,

library echo-http-server
  import: base-settings
  hs-source-dirs: echo-http-server
  exposed-modules:
    EchoHttpServer
  build-depends:
    http-media >=0.8 && <0.9,
    http-types >=0.12 && <0.13,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.4,
    rerebase >=1.15.0.3 && <1.16,

test-suite test
  import: base-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    curly,
    echo-http-server,
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
